# ojsol

./: .gitignore  .gitmodules  README.md  WORKSPACE.bazel  compile_commands.json
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/local-features/bazel/: devcontainer-feature.json  install.sh
.devcontainer/local-features/graalvm/: devcontainer-feature.json  install.sh
.devcontainer/local-features/sbt/: install.sh
.devcontainer/scripts/: update.sh
CSES/: 1068.cc  BUILD.bazel  new  submit
CSES/1068/: solution.hpp  tests.cpp
CSES/1068_weird-algorithm/: solution.hpp  tests.cpp
CSES/1069/: solution.hpp  tests.cpp
CSES/1070/: solution.hpp  tests.cpp
CSES/1071/: solution.hpp  tests.cpp
CSES/1072/: solution.hpp  tests.cpp
CSES/1083/: solution.hpp  tests.cpp
CSES/1083_missing-number/: tests.cpp
CSES/1092/: solution.hpp  tests.cpp
CSES/1094/: solution.hpp  tests.cpp
CSES/1617/: solution.hpp  tests.cpp
CSES/1618/: solution.hpp  tests.cpp
CSES/1622/: solution.hpp  tests.cpp
CSES/1754/: solution.hpp  tests.cpp
CSES/1755/: solution.hpp  tests.cpp
CSES/2165/: solution.hpp  tests.cpp
CSES/2205/: solution.hpp  tests.cpp
CSES/template/: solution.hpp  tests.cpp
Hackerrank/: BUILD.bazel  new
Hackerrank/Algorithms/: AppleAndOrange.cpp  BeautifulPairs.cpp  BetweenTwoSets.cpp  BillDivision.cpp  BreakingTheRecords.cpp  DayOfTheProgrammer.cpp  DivisibleSumPairs.cpp  FlatlandSpaceStations.cpp  GradingStudents.cpp  IceCreamParlor.cpp  MigratoryBirds.cpp  NumberLineJumps.cpp  SalesByMatch.cpp  SubarrayDivision.cpp  SuperReducedString.cpp  TwoCharacters.cpp  WeightedUniformStrings.cpp
Hackerrank/InterviewPrep/: Mini-MaxSum.cpp  PlusMinus.cpp  SparseArrays.cpp  TimeConversion.cpp
ICPCMock/: BUILD.bazel  new
ICPCMock/1/: solution.hpp  tests.cpp
ICPCMock/2/: solution.hpp  tests.cpp
ICPCMock/template/: solution.hpp  tests.cpp
Leetcode/: BUILD.bazel  new
Leetcode/1071/: greatest-common-divisor-of-strings.hpp  greatest-common-divisor-of-strings_test.cpp  solution.hpp  tests.cpp
Leetcode/1071_greatest-common-divisor-of-strings/: tests.cpp
Leetcode/template/: solution.hpp  tests.cpp
