workspace(
    name = "ojsol",
)

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "bazel_skylib",
    sha256 = "f24ab666394232f834f74d19e2ff142b0af17466ea0c69a3f4c276ee75f6efce",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.4.0/bazel-skylib-1.4.0.tar.gz",
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.4.0/bazel-skylib-1.4.0.tar.gz",
    ],
)

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-0570e2d930a185bbc375be70d9ad96836b955a4f",
    urls = ["https://github.com/google/googletest/archive/0570e2d930a185bbc375be70d9ad96836b955a4f.zip"],
)

http_archive(
    name = "com_github_google_benchmark",
    sha256 = "bcab43290d4ef38e8a44af8ecc93755712f6fc2080e4f0bfc4ceef4b62834dcb",
    strip_prefix = "benchmark-84c71faa8126e4eedc2bb520352615cb4484d6ad",
    urls = ["https://github.com/google/benchmark/archive/84c71faa8126e4eedc2bb520352615cb4484d6ad.zip"],
)

http_archive(
    name = "com_google_absl",
    strip_prefix = "abseil-cpp-2de126cc5826a8d464270ead65a7a9a7b012b741",
    urls = ["https://github.com/abseil/abseil-cpp/archive/2de126cc5826a8d464270ead65a7a9a7b012b741.zip"],
)

http_archive(
    name = "com_googlesource_code_re2",
    strip_prefix = "re2-b025c6a3ae05995660e3b882eb3277f4399ced1a",
    urls = ["https://github.com/google/re2/archive/b025c6a3ae05995660e3b882eb3277f4399ced1a.zip"],
)

git_repository(
    name = "rules_cc",
    commit = "0d68932a68bcd6f332b14ccc561990586de2318d",
    remote = "https://github.com/bazelbuild/rules_cc",
    shallow_since = "1675441398 -0800",
)

http_archive(
    name = "hedron_compile_commands",
    strip_prefix = "bazel-compile-commands-extractor-d3afb5dfadd4beca48bb027112d029f2d34ff0a0",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/d3afb5dfadd4beca48bb027112d029f2d34ff0a0.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()
