package(default_visibility = ["//visibility:public"])

cc_library(
    name = "exercises",
    srcs = glob(
        ["**/*.cc"],
        exclude = glob(["**/*_test.cpp"]),
    ),
    hdrs = glob(["**/*.hpp"]),
    visibility = ["//visibility:public"],
)

cc_test(
    name = "tests",
    size = "small",
    # testonly = False,
    srcs = glob(["**/*_test.cpp"]),
    deps = [
        ":exercises",
        "@com_google_googletest//:gtest_main",
    ],
)
